children as table; simplify HR; improve logs/exceptions; comment-out unused code